--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     },
     "dependencies": {
         "axios": "^0.27.2",
+        "ioredis": "^5.1.0",
         "next": "12.2.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.4.0",
         "react-ts-loaders": "^1.2.1",
         "react-use-lanyard": "^0.1.2",
-        "redis-om": "^0.3.5",
-        "styled-components": "^5.3.5"
+        "redis-om": "^0.3.5"
     },
     "devDependencies": {
         "@types/node": "18.0.0",
