--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "axios": "^0.27.2",
+        "framer-motion": "^6.5.1",
         "ioredis": "^5.1.0",
         "next": "12.2.0",
         "react": "18.2.0",
