--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     },
     "dependencies": {
         "axios": "^0.27.2",
+        "dotenv": "^16.0.1",
+        "envsafe": "^2.0.3",
         "framer-motion": "^6.5.1",
         "ioredis": "^5.1.0",
         "next": "12.2.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.4.0",
+        "react-is": "^18.2.0",
         "react-ts-loaders": "^1.2.1",
-        "react-use-lanyard": "^0.1.2",
-        "redis-om": "^0.3.5"
+        "redis-om": "^0.3.5",
+        "swr": "^1.3.0",
+        "use-lanyard": "^1.2.0"
     },
     "devDependencies": {
         "@types/node": "18.0.0",
