--- a/portfolio-config.json
+++ b/portfolio-config.json
@@ -8,5 +8,5 @@
             "subheading": "coding %d"
         }
     ],
-    "footer_projects": ["preplar"]
+    "discord_id": "323167091119357953"
 }
