--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "axios": "^0.27.2",
+        "csstype": "^3.0.10",
         "dotenv": "^16.0.1",
         "envsafe": "^2.0.3",
         "framer-motion": "^6.5.1",
@@ -17,8 +18,9 @@
         "next": "12.2.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-hot-toast": "^2.3.0",
         "react-icons": "^4.4.0",
-        "react-is": "^18.2.0",
+        "react-is": "^16.8.0",
         "react-ts-loaders": "^1.2.1",
         "redis-om": "^0.3.5",
         "swr": "^1.3.0",
